k8s/cluster/services/dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard

# install kubernetes dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  rules:
  - host: dashboard.${INGRESS_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-kong-proxy
            port:
              number: 80
  tls:
    - secretName: ingress-tls
      hosts:
        - dashboard.${INGRESS_HOST}

# create service account for accessing dashboard
