k8s/cluster/services/registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry

# create persistent volume for registry storage
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: registry
spec:
  basicAuth:
    secret: basic-auth

# install registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd,registry-basic-auth@kubernetescrd
spec:
  rules:
  - host: "registry.${INGRESS_HOST}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-docker-registry
            port:
              number: 5000
  tls:
    - secretName: ingress-tls
      hosts:
        - registry.${INGRESS_HOST}

# add internal ingress that doesn't require auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-internal-ingress
  namespace: registry
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd,kube-system-internal-only@kubernetescrd
spec:
  rules:
  - host: "registry-internal.${INGRESS_HOST}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-docker-registry
            port:
              number: 5000
  tls:
    - secretName: ingress-tls
      hosts:
        - registry-internal.${INGRESS_HOST}
